# recastnavigation

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODING_GUIDELINES.md  README.md  VS2022_SETUP.md  build_and_test.bat  generate_vs2022_solution.bat
DebugUtils/: CMakeLists.txt
Detour/: CMakeLists.txt
DetourCrowd/: CMakeLists.txt
DetourTileCache/: CMakeLists.txt
Recast/: CMakeLists.txt
Tests/: CMakeLists.txt  TestHelpers.cpp  TestHelpers.h  Tests_NavMeshComparison.cpp  Tests_NavMeshSave.cpp
Tests/UnityWrapper/: CMakeLists.txt  TestUnityNavMeshBuilder.cpp  TestUnityNavMeshComparison.cpp  TestUnityPathfinding.cpp
UnityProject/ProjectSettings/: ProjectSettings.asset
UnityProject/UserSettings/Layouts/: default-2022.dwlt
UnityRecastNavigation/: DLL_Copy_Troubleshooting_Guide.md  Makefile  README.md  build.bat
UnityRecastNavigation/Assets/Scenes/: SampleScene.unity  TestScene.unity
UnityRecastNavigation/Assets/Scripts/RecastNavigation/: NavMeshGizmo.cs  RecastNavigationComponent.cs  RecastNavigationSample.cs  RecastNavigationWrapper.cs
UnityRecastNavigation/Assets/Scripts/RecastNavigation/Editor/: NavMeshGizmoEditor.cs  RecastNavigationEditor.cs  RecastNavigationQuickTool.cs  RecastNavigationSetupGuide.cs
UnityRecastNavigation/Assets/Scripts/RecastNavigation/Tests/: RecastNavigationWrapperTests.cs
UnityRecastNavigation/ProjectSettings/: ProjectSettings.asset
UnityRecastNavigation/Tests/: RecastNavigationWrapperTests.cs
UnityRecastNavigation/UserSettings/: EditorUserSettings.asset
UnityRecastNavigation/UserSettings/Layouts/: default-2022.dwlt
UnityWrapper/: .gitignore  CMakeLists.txt  README.md  build.bat  run_tests.bat  run_tests.sh
UnityWrapper/Include/: RecastNavigationUnity.h  UnityCommonTypes.h  UnityCrowdManager.h  UnityLog.h  UnityNavMeshBuilder.h  UnityNavMeshQuery.h  UnityPathfinding.h  UnityRecastWrapper.h
UnityWrapper/Scripts/: RecastNavigationUnity.cs
UnityWrapper/Source/: RecastNavigationUnity.cpp  UnityCrowdManager.cpp  UnityLog.cpp  UnityNavMeshBuilder.cpp  UnityNavMeshQuery.cpp  UnityPathfinding.cpp  UnityRecastWrapper.cpp
UnityWrapper/Tests/: CMakeLists.txt  TestUnityNavMeshBuilder.cpp  TestUnityPathfinding.cpp  TestUnityRecastWrapper.cpp
UnityWrapper/UnityScripts/: RecastNavigationExample.cs  RecastNavigationWrapper.cs
UnityWrapper/UnityScripts/Tests/: RecastNavigationWrapperTests.cs
